# criome

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  INTENT.md  README.md  flake.nix  skills.md
nix/modules/: criome.nix
nix/tests/: criome-node.nix
schema/: crayome.language.schema  criome.language.schema
src/: admission.rs  assert.rs  ceremony.rs  command.rs  connection.rs  conveyance.rs  daemon.rs  deploy_encode.rs  dispatch.rs  engine.rs  error.rs  founding.rs  handshake.rs  kinds.rs  language.rs  lib.rs  listener.rs  main.rs  master_key.rs  query.rs  reader.rs  router_client.rs  tables.rs  text.rs  transport.rs  uds.rs  voice.rs
src/actors/: authorization.rs  mod.rs  registry.rs  root.rs  signer.rs  store.rs  subscription.rs  verifier.rs
src/validator/: cascade.rs  schema.rs
tests/: actor_discipline_truth.rs  cluster_authorization_bridge.rs  daemon_skeleton.rs  dispatch.rs  distinct_node_identities.rs  engine.rs  founding_conveyance.rs  intercept_policy.rs  language.rs  quorum_collection.rs  quorum_ledger_restart.rs  root_founding.rs  sign_as_criome_host_id.rs  two_round_commit.rs  witness_clock_gate.rs
