[package]
name         = "criome"
version      = "0.4.3"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/criome"
description  = "Spartan BLS-signature authentication and attestation daemon for the Persona ecosystem."

[lib]
name = "criome"
path = "src/lib.rs"

[[bin]]
name = "criome"
path = "src/main.rs"
required-features = ["nota-text"]

[[bin]]
name = "criome-daemon"
path = "src/bin/criome-daemon.rs"

[[bin]]
name = "criome-encode-configuration"
path = "src/bin/criome-encode-configuration.rs"
required-features = ["nota-text"]

[[bin]]
name = "criome-cluster-witness-test"
path = "src/bin/criome-cluster-witness-test.rs"
required-features = ["cluster-witness"]

[[bin]]
name = "criome-write-configuration"
path = "src/bin/criome-write-configuration.rs"
required-features = ["cluster-witness"]

[[bin]]
name = "criome-auto-approve-witness-test"
path = "src/bin/criome-auto-approve-witness-test.rs"
required-features = ["cluster-witness"]

[[bin]]
name = "criome-client-approval-witness-test"
path = "src/bin/criome-client-approval-witness-test.rs"
required-features = ["cluster-witness"]

[features]
default = []
nota-text = ["dep:nota-next", "signal-criome/nota-text", "signal-frame/nota-text"]
# The criome-cluster test harness binaries (the authorization witness and its
# daemon-config encoder) — designer report 704, Stage A. Excluded from
# production builds; the NixOS cluster test enables it.
cluster-witness = []

[dependencies]
blake3       = "1"
blst         = "0.3"
kameo        = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main", default-features = false, features = ["macros", "tracing"] }
nota-next    = { package = "nota", git = "https://github.com/LiGoldragon/nota-next.git", branch = "main", optional = true }
meta-signal-criome = { git = "https://github.com/LiGoldragon/meta-signal-criome.git", branch = "main" }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
sema-engine  = { git = "https://github.com/LiGoldragon/sema-engine.git", branch = "main" }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-criome = { git = "https://github.com/LiGoldragon/signal-criome.git", branch = "main" }
thiserror    = "2"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net"] }
triad-runtime = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "main" }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"

[patch.crates-io]
kameo = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main" }
